Resized Bond Timeline, logo too large now, unsure how to fix

--- a/BondMCI-Website/index.css
+++ b/BondMCI-Website/index.css
@@ -66,7 +66,7 @@ nav{
     z-index: 1;
     background: #333;
     margin: 0 auto;
-    width:calc(100% - 60px);
+    width:calc(1000px);
 }
 .logo{
     
@@ -76,8 +76,8 @@ nav{
     font-size: 25px;
     text-align: left;
     padding-left: 2%;
-    width: 3000px;
-    height: 6000px;
+    width: 200px;
+    height: 600px;
 }
 .schema{
     
